# stripe-layers

./: Pipfile  README.md  StripeLayer.py  cifar100.py  cifar100invariant.py  expansion.py  position_encode.py  pyproject.toml  test.py
config/: cifar100_config.yaml  cifar100invariant_config.yaml
examples/: cifar100.py  cifar100invariant.py
stripe_layers/: StripeLayer.py  expansion.py  position_encode.py
tests/: test_layers.py
