[tool.poetry]
name = "stripe-layers"
version = "0.1.0"
description = ""
authors = ["John <john.loverich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
high-order-layers-torch = "^1.1.9"
hydra-core = "^1.2.0"
torch = "^1.11.0"
pytorch-lightning = "^1.6.4"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.2"
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
